# diff-notes

./: LICENSE  README.md  package-lock.json  package.json  tailwind.config.js
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: editor.svelte  schemas.ts  shortcut.ts  stores.ts
src/lib/components/: loader.svelte  spinner.svelte  split.svelte  tooltip.svelte
src/lib/components/statusbar/: about.svelte  autosave.svelte  delete.svelte  history.svelte  job.svelte  layout.svelte  mode.svelte  portion.svelte
src/lib/components/toolbar/: action.svelte  copy.svelte  move.svelte  paste.svelte  title.svelte
src/routes/: +page.svelte
