[package]
name = "diff-notes"
version = "0.0.1"
description = "A truly minimal annotation tool with integrated differentiation and merge functionality"
authors = ["lucaslrodri"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "clipboard-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diffmatchpatch = "0.0.4"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
